--- a/README
+++ b/README
@@ -286,6 +286,7 @@ reports, suggestions, and valuable resources:
     Ákos Frohner
     Marcus Granado
     Scott Grizzard
+    Helmut Grohne
     Steve Grubb
     Philip Guenther
     Dominic Hargreaves
