Add missing note about SA-2010-007.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-9@24582 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -62,6 +62,7 @@ Major changes in 1.9
 
 Code quality:
 
+* Fix MITKRB5-SA-2010-007 checksum vulnerabilities (CVE-2010-1324 and others)
 * Python-based testing framework
 * DAL cleanup
 
