--- a/doc/admin.texinfo
+++ b/doc/admin.texinfo
@@ -615,6 +615,13 @@ The default value for this flag is @value{DefaultForwardable}.
 If this flag is set, initial tickets by default will be proxiable.
 The default value for this flag is @value{DefaultProxiable}.
 
+@itemx rdns
+If set to false, prevent the use of reverse DNS resolution when
+translating hostnames into service principal names.  Defaults to
+true.  Setting this flag to false is more secure, but may force
+users to exclusively use fully qualified domain names when
+authenticating to services.
+
 @end table
 
 
