Document clpreauth/kdcpreauth module configuration.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24982 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/admin.texinfo
+++ b/doc/admin.texinfo
@@ -1128,6 +1128,8 @@ This LDAP specific tags indicates the number of connections to be maintained per
 @menu
 * pwqual interface::            
 * kadm5_hook interface::        
+* clpreauth interface::        
+* kdcpreauth interface::        
 @end menu
 
 Tags in the [plugins] section can be used to register dynamic plugin
@@ -1183,13 +1185,27 @@ built with Hesiod support)
 Checks against components of the principal name
 @end table
 
-@node kadm5_hook interface,  , pwqual interface, plugins
+@node kadm5_hook interface, clpreauth interface, pwqual interface, plugins
 @subsubsection kadm5_hook interface
 The kadm5_hook interface provides plugins with information on
 principal creation, modification, password changes and deletion. This
 interface can be used to write a plugin to synchronize MIT Kerberos
 with another database such as Active Directory. No plugins are built
 in for this interface.
+
+@node clpreauth interface, kdcpreauth interface, kadm5_hook interface, plugins
+@subsubsection clpreauth interface
+
+The clpreauth interface allows plugin modules to provide client
+preauthentication mechanisms.  There are no built-in modules for this
+interface.
+
+@node kdcpreauth interface, , clpreauth interface, plugins
+@subsubsection kdcpreauth interface
+
+The kdcpreauth interface allows plugin modules to provide KDC
+preauthentication mechanisms.  There are no built-in modules for this
+interface.
 
 @node pkinit client options, Sample krb5.conf File, plugins, krb5.conf
 @subsection pkinit options
