Fix typo in preauth plugin krb5.conf docs.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25001 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/admin.texinfo
+++ b/doc/admin.texinfo
@@ -1195,7 +1195,7 @@ in for this interface.
 @node clpreauth and kdcpreauth interfaces, , kadm5_hook interface, plugins
 @subsubsection clpreauth interface
 
-The clpreauth and kdcpreauth interfaces allows plugin modules to provide
+The clpreauth and kdcpreauth interfaces allow plugin modules to provide
 client and KDC preauthentication mechanisms.  The following built-in
 modules exist:
 
