Change how bundled libverto is linked.
Give libverto-k5ev a header file.  When using the internal verto
library, link against -lverto-k5ev and use verto_default_k5ev()
instead of verto_default(), bypassing the module loading logic and
making static builds possible.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25166 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/k5ev/README
+++ b/src/util/k5ev/README
@@ -1,8 +1,6 @@
 This directory builds a private libverto module using an embedded
 libev with renamed symbols (so we don't leak libev symbols into the
-namespace on platforms where we can't control the export list).  The
-module is not intended to be used directly by applications, so it has
-no header file.
+namespace on platforms where we can't control the export list).
 
 libev has built-in support for this kind of embedding, so we don't
 have to modify the libev sources.  Following libev's documentation,
